tests/error/main_sleeping_on_itself.c
// fail "Expected a type, got a declaration."


int
main ()
{
  
}

main ()
{
}

